# rust-daemon

./: Cargo.toml  README.md
examples/: daemon.rs
src/: lib.rs  linux.rs  linux_systemd.rs  linux_systemv.rs  macros.rs
src/linux/: mod.rs  systemd.rs  systemv.rs
