[package]
name = "daemon"
version = "0.1.0"
authors = ["Alihan Dogus Yalcin <alihandogusyalcin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
regex = "1.5"
log = "0.4.14"
async-trait = "0.1.50"
tokio = { version = "1.5.0", features = ["fs", "io-util", "process"] }

[dev-dependencies]
env_logger = "0.8.3"
tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread"] }
